<resources>
    <string name="empty_string"></string>
    <string name="genre">боевики</string>
    <string name="date">22.04.2021</string>
    <string name="title_for_actors">Актеры</string>
    <string name="jason_statham_name">Джейсон Стэйтем</string>
    <string name="holt_mccallany_name">Холт Маккэллани</string>
    <string name="josh_harnett_name">Джош Харнетт</string>
    <string name="popular_now">Популярное сейчас</string>
    <string name="loupe">Поиск по фильмам</string>
    <string name="button_for_test_diff_utils">Протестировать diffUtils</string>
    <string name="user_name">Константин</string>
    <string name="user_email">konst.89@mail.com</string>
    <string name="interests">Интересы</string>
    <string name="genre1">боевики</string>
    <string name="genre2">драмы</string>
    <string name="genre3">комедии</string>
    <string name="personal_data">Личные данные</string>
    <string name="name">Имя</string>
    <string name="password">Пароль</string>
    <string name="user_password">*************</string>
    <string name="email">Почта</string>
    <string name="phone">Телефон</string>
    <string name="settings">Настройки</string>
    <string name="notifications_and_sounds">Уведомления и звуки</string>
    <string name="privacy">Конфедициальность</string>
    <string name="theme">Тема</string>
    <string name="language">Язык</string>
    <string name="data_and_storage">Данные и память</string>
    <string name="app">Приложение</string>
    <string name="ask_question">Задать вопрос</string>
    <string name="tell_about_problem">Сообщить о проблеме</string>
    <string name="exit">Выйти</string>
    <string name="continue_as_guest">Продолжить как гость</string>
    <string name="log_in">Войти</string>
</resources>