<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/movie_details_film_poster"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_for_movie_details_poster"
        android:contentDescription="@string/empty_string"
        android:scaleType="centerCrop"
        android:src="@drawable/wrath_of_man_poster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/movie_details_description_card_view"
        style="@style/CustomCardCorners"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_top_for_description_card_view"
        android:layout_marginBottom="@dimen/height_for_bottom_navigation_view"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/movie_details_guideline_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="@dimen/guideline_right_and_left_for_description_card_view" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/movie_details_guideline_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintGuide_end="@dimen/guideline_right_and_left_for_description_card_view" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/movie_details_guideline_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="@dimen/guideline_top_for_description_card_view" />

                <TextView
                    android:id="@+id/movie_details_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/frame_for_text_genre"
                    android:paddingStart="@dimen/padding_start_and_end_for_genre"
                    android:paddingTop="@dimen/padding_top_and_bottom_for_genre"
                    android:paddingEnd="@dimen/padding_start_and_end_for_genre"
                    android:paddingBottom="@dimen/padding_top_and_bottom_for_genre"
                    android:text="@string/genre"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_for_genre"
                    android:typeface="normal"
                    app:layout_constraintStart_toStartOf="@+id/movie_details_guideline_left"
                    app:layout_constraintTop_toTopOf="@+id/movie_details_guideline_top" />

                <TextView
                    android:id="@+id/movie_details_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_between_genre_and_date"
                    android:layout_marginTop="@dimen/margin_top_for_date"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_for_date"
                    android:typeface="normal"
                    app:layout_constraintStart_toEndOf="@+id/movie_details_genre"
                    app:layout_constraintTop_toTopOf="@+id/movie_details_guideline_top" />

                <TextView
                    android:id="@+id/movie_details_age_limit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_for_age_limit"
                    android:background="@drawable/frame_for_text_age_limit"
                    android:paddingStart="@dimen/padding_start_for_age_limit"
                    android:paddingTop="@dimen/padding_top_for_age_limit"
                    android:paddingEnd="@dimen/padding_start_for_age_limit"
                    android:paddingBottom="@dimen/padding_top_for_age_limit"
                    android:text="@string/empty_string"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_for_age_limit"
                    android:typeface="normal"
                    app:layout_constraintEnd_toStartOf="@+id/movie_details_guideline_right"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/movie_details_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_between_genre_and_name"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_for_name"
                    android:typeface="normal"
                    app:layout_constraintStart_toStartOf="@+id/movie_details_guideline_left"
                    app:layout_constraintTop_toBottomOf="@+id/movie_details_genre" />

                <RatingBar
                    android:id="@+id/movie_details_rating_bar"
                    style="@style/CustomRatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_for_stars_from_name"
                    android:isIndicator="true"
                    app:layout_constraintStart_toStartOf="@+id/movie_details_guideline_left"
                    app:layout_constraintTop_toBottomOf="@+id/movie_details_name" />

                <TextView
                    android:id="@+id/movie_details_film_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_for_film_description"
                    android:text="@string/empty_string"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_for_film_description"
                    android:typeface="normal"
                    app:layout_constraintEnd_toStartOf="@+id/movie_details_guideline_right"
                    app:layout_constraintStart_toStartOf="@+id/movie_details_guideline_left"
                    app:layout_constraintTop_toBottomOf="@+id/movie_details_rating_bar" />

                <TextView
                    android:id="@+id/movie_details_title_for_actors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_for_title_for_actors"
                    android:text="@string/title_for_actors"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_for_title_for_actors"
                    android:typeface="normal"
                    app:layout_constraintStart_toStartOf="@+id/movie_details_guideline_left"
                    app:layout_constraintTop_toBottomOf="@+id/movie_details_film_description" />

                <HorizontalScrollView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_for_horizontal_scroll_view_for_actors"
                    app:layout_constraintEnd_toEndOf="@+id/movie_details_guideline_right"
                    app:layout_constraintStart_toStartOf="@+id/movie_details_guideline_left"
                    app:layout_constraintTop_toBottomOf="@+id/movie_details_title_for_actors">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/movie_details_jason_statham_photo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/jason_statham_name"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/jason_statham" />

                        <TextView
                            android:id="@+id/movie_details_jason_statham_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_top_for_actor_name"
                            android:text="@string/jason_statham_name"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_for_actor_name"
                            android:typeface="normal"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/movie_details_jason_statham_photo" />

                        <ImageView
                            android:id="@+id/movie_details_holt_mccallany_photo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/horizontal_space_between_actors"
                            android:contentDescription="@string/holt_mccallany_name"
                            app:layout_constraintStart_toEndOf="@+id/movie_details_jason_statham_photo"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/holt_mccallany" />

                        <TextView
                            android:id="@+id/movie_details_holt_mccallany_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/horizontal_space_between_actors"
                            android:layout_marginTop="@dimen/margin_top_for_actor_name"
                            android:text="@string/holt_mccallany_name"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_for_actor_name"
                            android:typeface="normal"
                            app:layout_constraintStart_toEndOf="@+id/movie_details_jason_statham_photo"
                            app:layout_constraintTop_toBottomOf="@+id/movie_details_holt_mccallany_photo" />

                        <ImageView
                            android:id="@+id/movie_details_josh_harnett_photo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/horizontal_space_between_actors"
                            android:contentDescription="@string/josh_harnett_name"
                            app:layout_constraintStart_toEndOf="@+id/movie_details_holt_mccallany_photo"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/josh_harnett" />

                        <TextView
                            android:id="@+id/movie_details_josh_harnett_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/horizontal_space_between_actors"
                            android:layout_marginTop="@dimen/margin_top_for_actor_name"
                            android:text="@string/josh_harnett_name"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_for_actor_name"
                            android:typeface="normal"
                            app:layout_constraintStart_toEndOf="@+id/movie_details_holt_mccallany_photo"
                            app:layout_constraintTop_toBottomOf="@+id/movie_details_josh_harnett_photo" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </HorizontalScrollView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>